refactor(#97): address code review comments - replace auth middleware by middleware loop per handler, removed unused code, replace Pascal case property names with camel case.

--- a/api/openapi/paths/admin/responses.yaml
+++ b/api/openapi/paths/admin/responses.yaml
@@ -3,10 +3,10 @@ components:
     AdvertisementsSync:
       type: object
       properties:
-        Message:
+        message:
           type: string
-      required:
-        - Message
+      message:
+        - message
 
   responses:
     AdvertisementsSyncResponse:
