deps(#132): exclude the wrapcheck rule in the ports layer due to the use of the generic application errors. Also exclude the wrapcheck rule in the server2 package to simplify the logic, as errors should be wrapped by the third-party clients.

--- a/.golangci-lint.yml
+++ b/.golangci-lint.yml
@@ -102,6 +102,14 @@ issues:
         - gosec
         - wrapcheck
         - bodyclose
+    
+    - path: /ports/
+      linters:
+        - wrapcheck
+
+    - path: /server2/
+      linters:
+        - wrapcheck
 
     - path: /core/
       linters:
