--- a/api/openapi/paths/admin/responses.yaml
+++ b/api/openapi/paths/admin/responses.yaml
@@ -5,7 +5,7 @@ components:
       properties:
         message:
           type: string
-      message:
+      required:
         - message
 
   responses:
