fix(#136): update open api docs, remove unused handler varaible

--- a/api/openapi/server/api.yaml
+++ b/api/openapi/server/api.yaml
@@ -33,6 +33,9 @@ paths:
       tags:
         - non-admin
       operationId: ListTopicManagers
+      security:
+        - bearerAuth: 
+            - user
       responses:
         200:
           $ref: '../paths/non_admin/responses.yaml#/components/responses/TopicManagersListResponse'
