refactor(#135): add list lookup service provider update open api and http code, adjust test cases

--- a/api/openapi/server/api.yaml
+++ b/api/openapi/server/api.yaml
@@ -28,6 +28,20 @@ paths:
         500:
           $ref: '#/components/responses/InternalServerErrorResponse'
 
+  /api/v1/listLookupServiceProviders:
+    get:
+      tags:
+        - non-admin
+      operationId: ListLookupServiceProviders
+      security:
+        - bearerAuth: 
+            - user
+      responses:
+        200:
+          $ref: '../paths/non_admin/responses.yaml#/components/responses/LookupServiceProvidersListResponse'
+        500:
+          $ref: '#/components/responses/InternalServerErrorResponse'
+
   /api/v1/submit:
     post:
       tags:
