fix(#133): fix issue with Taskfile unit test command, add missing security param to open api file, misc edits

--- a/api/openapi/server/api.yaml
+++ b/api/openapi/server/api.yaml
@@ -33,6 +33,9 @@ paths:
       tags:
         - non-admin
       operationId: GetTopicManagerDocumentation
+      security:
+        - bearerAuth:
+            - user
       parameters:
         - in: query
           name: topicManager
