feat(#134): add table driven tests for lookup documentation handler, add in security param for open api, misc formatting

--- a/api/openapi/server/api.yaml
+++ b/api/openapi/server/api.yaml
@@ -33,6 +33,9 @@ paths:
       tags:
         - non-admin
       operationId: GetLookupServiceProviderDocumentation
+      security:
+        - bearerAuth:
+            - user
       parameters:
         - in: query
           name: lookupService
