refactor(#138): add open api and http logic for start GASP sync handler, update tests

--- a/api/openapi/paths/admin/responses.yaml
+++ b/api/openapi/paths/admin/responses.yaml
@@ -8,6 +8,14 @@ components:
       required:
         - message
 
+    StartGASPSync:
+      type: object
+      properties:
+        message:
+          type: string
+      required:
+        - message
+
   responses:
     AdvertisementsSyncResponse:
       description: |
@@ -16,3 +24,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/AdvertisementsSync'
+
+    StartGASPSyncResponse:
+      description: |
+         GASP sync request successfully started.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/StartGASPSync'
