--- a/api/openapi/server/api.yaml
+++ b/api/openapi/server/api.yaml
@@ -28,6 +28,20 @@ paths:
         500:
           $ref: '#/components/responses/InternalServerErrorResponse'
 
+  /api/v1/admin/startGASPSync:
+    post:
+      tags:
+        - admin
+      operationId: StartGASPSync
+      security:
+        - bearerAuth:
+            - admin
+      responses:
+        200:
+          $ref: '../paths/admin/responses.yaml#/components/responses/StartGASPSyncResponse'
+        500:
+          $ref: '#/components/responses/InternalServerErrorResponse'
+
   /api/v1/submit:
     post:
       tags:
