fix(#134): fix assertion bug in tests, misc format updates

--- a/api/openapi/server/api.yaml
+++ b/api/openapi/server/api.yaml
@@ -38,7 +38,7 @@ paths:
             - user
       parameters:
         - in: query
-          name: lookupServiceProvider
+          name: lookupService
           schema:
             type: string
           required: true
