feat(arc-ingest): Add open api, application and testabilities for arc-ingest endpoint

--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -59,6 +59,19 @@ components:
       required:
         - documentation
 
+    ArcIngest:
+      type: object
+      properties:
+        status:
+          type: string
+          example: 'success'
+        message:
+          type: string
+          example: 'Transaction status updated'
+      required:
+        - status
+        - message
+
   responses:
     SubmitTransactionResponse:
       description: |
@@ -81,3 +94,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/TopicManagerDocumentation'
+
+    ArcIngestResponse:
+      description: |
+         Merkle proof successfully processed and transaction status updated.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ArcIngest'
