feat(#130): add open api docs for request foreign gasp node endpoint

--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -59,6 +59,11 @@ components:
       required:
         - documentation
 
+    GASPNode:
+      type: object
+      description: A GASP node representation from the overlay engine
+
+
   responses:
     SubmitTransactionResponse:
       description: |
@@ -81,3 +86,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/TopicManagerDocumentation'
+
+    RequestForeignGASPNodeResponse:
+      description: |
+         Overlay engine successfully provided the requested foreign GASP node.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/GASPNode'
