--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -57,7 +57,31 @@ components:
           type: string
           description: Markdown-formatted documentation for the lookup service
       required:
-        - documentation
+        - documentation   
+  
+    RequestSyncRes:
+      type: object
+      properties:
+        UTXOList:
+          type: array
+          items:
+            type: object
+            properties:
+              txid:
+                type: string
+                description: 'Transaction ID in hexadecimal format'
+              vout:
+                type: integer
+                description: 'Output index number'
+            required:
+              - txid
+              - vout
+        since:
+          type: integer
+          description: 'Timestamp or sequence number from which synchronization data was generated'
+      required:
+        - UTXOList
+        - since
 
   responses:
     SubmitTransactionResponse:
@@ -81,3 +105,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/TopicManagerDocumentation'
+
+    RequestSyncResResponse:
+      description: |
+        Response containing synchronization data for the requested topic.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/RequestSyncRes'
