--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -42,7 +42,7 @@ components:
         - STEAK
 
     LookupServiceProviderMetadata:
-     type: object
+      type: object
       properties:
         name:
           type: string
@@ -85,7 +85,7 @@ components:
       type: object
       additionalProperties:
         $ref: "#/components/schemas/LookupServiceProviderMetadata"
-        
+ 
     TopicManagersList:
       type: object
       additionalProperties:
@@ -112,14 +112,14 @@ components:
   responses:
     SubmitTransactionResponse:
       description: |
-         Overlay engine successfully processed the submitted transaction octet-stream with the specified topic headers.
+        Overlay engine successfully processed the submitted transaction octet-stream with the specified topic headers.
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/SubmitTransaction'
     
     LookupServiceProvidersListResponse:
-      description:
+      description: |
         A list of lookup service providers with their metadata.
       content:
         application/json:
@@ -135,14 +135,15 @@ components:
             $ref: '#/components/schemas/TopicManagersList'
 
     LookupServiceProviderDocumentationResponse:
-      description: Returns the documentation for the specified lookup service
+      description: |
+        Returns the documentation for the specified lookup service
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/LookupServiceDocumentation'
 
     TopicManagerDocumentationResponse:
-      description:
+      description: |
         Returns the documentation for the specified topic manager
       content:
         application/json:
