feat(#129): add open api code for lookup endpoint

--- a/api/openapi/paths/non_admin/request-bodies.yaml
+++ b/api/openapi/paths/non_admin/request-bodies.yaml
@@ -12,3 +12,20 @@ components:
                 description: 'Serialized transaction data (e.g., a binary format such as Protobuf or other)'
             required:
               - Transaction
+
+    LookupQuestionBody:
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              service:
+                type: string
+                description: 'Service name to query'
+              query:
+                type: object
+                description: 'Query parameters specific to the service'
+                additionalProperties: true
+            required:
+              - service
+              - query
