--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -41,6 +41,16 @@ components:
       required:
         - STEAK
 
+    LookupAnswer:
+      type: object
+      properties:
+        answer:
+          type: object
+          description: 'The answer data for the lookup question'
+          additionalProperties: true
+      required:
+        - answer
+
     LookupServiceProviderMetadata:
       type: object
       properties:
@@ -117,6 +127,14 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/SubmitTransaction'
+
+    LookupQuestionResponse:
+      description: |
+        Overlay engine successfully processed the lookup question and returned an answer.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/LookupAnswer'
 
     LookupServiceProvidersListResponse:
       description: |
