--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -112,7 +112,40 @@ components:
     GASPNode:
       type: object
       description: A GASP node representation from the overlay engine
-
+      properties:
+        graphID:
+          type: string
+          description: The graph ID of the GASP node
+        rawTx:
+          type: string
+          description: The raw transaction of the GASP node
+        outputIndex:
+          type: integer
+          description: The output index of the GASP node
+        proof:
+          type: string
+          description: The proof of the GASP node
+        txMetadata:
+          type: string
+          description: The metadata of the GASP node
+        outputMetadata:
+          type: string
+          description: The metadata of the GASP node
+        inputs:
+          type: object
+          description: The inputs of the GASP node
+        ancillaryBeef:
+          type: string
+          description: The ancillary beef of the GASP node
+      required:
+        - graphID
+        - rawTx
+        - outputIndex
+        - proof
+        - txMetadata
+        - outputMetadata
+        - inputs
+        - ancillaryBeef
 
   responses:
     SubmitTransactionResponse:
