refactor(#129): add changes to define output response value, update test cases and mock methods to match

--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -41,15 +41,34 @@ components:
       required:
         - STEAK
 
+    OutputListItem:
+      type: object
+      properties:
+        beef:
+          type: string
+          format: byte
+        outputIndex:
+          type: integer
+          format: uint32
+      required:
+        - beef
+        - outputIndex
+
     LookupAnswer:
       type: object
       properties:
-        answer:
-          type: object
-          description: 'The answer data for the lookup question'
-          additionalProperties: true
+        type:
+          type: string
+        outputs:
+          type: array
+          items:
+            $ref: "#/components/schemas/OutputListItem"
+        result:
+          type: string
       required:
-        - answer
+        - type
+        - outputs
+        - result
 
     LookupServiceProviderMetadata:
       type: object
