--- a/api/openapi/paths/non_admin/request-bodies.yaml
+++ b/api/openapi/paths/non_admin/request-bodies.yaml
@@ -28,3 +28,20 @@ components:
             required:
               - version
               - since
+
+    LookupQuestionBody:
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              service:
+                type: string
+                description: 'Service name to query'
+              query:
+                type: object
+                description: 'Query parameters specific to the service'
+                additionalProperties: true
+            required:
+              - service
+              - query
