refactor(#129): update documentation, simplify the codebase.

--- a/api/openapi/paths/non_admin/responses.yaml
+++ b/api/openapi/paths/non_admin/responses.yaml
@@ -79,16 +79,16 @@ components:
           type: string
         iconURL:
           type: string
-          nullable: true
         version:
           type: string
-          nullable: true
         informationURL:
           type: string
-          nullable: true
       required:
         - name
         - shortDescription
+        - iconURL
+        - version
+        - informationURL
 
     TopicManagerMetadata:
       type: object
