fix(#130): add missing format for since property.

--- a/docs/api/openapi/overlay-services.yaml
+++ b/docs/api/openapi/overlay-services.yaml
@@ -295,6 +295,7 @@ paths:
                   description: The version number of the GASP protocol
                 since:
                   type: integer
+                  format: uint32
                   description: Timestamp or sequence number from which to start synchronization
               required:
                 - version
