--- a/docs/api/openapi/overlay-services.yaml
+++ b/docs/api/openapi/overlay-services.yaml
@@ -44,31 +44,7 @@ paths:
             - user
       responses:
         '200':
-          description: |
-            A list of lookup service providers with their metadata.
-          content:
-            application/json:
-              schema:
-                type: object
-                additionalProperties:
-                  type: object
-                  properties:
-                    name:
-                      type: string
-                    shortDescription:
-                      type: string
-                    iconURL:
-                      type: string
-                      nullable: true
-                    version:
-                      type: string
-                      nullable: true
-                    informationURL:
-                      type: string
-                      nullable: true
-                  required:
-                    - name
-                    - shortDescription
+          $ref: '#/paths/~1api~1v1~1listTopicManagers/get/responses/200'
   /api/v1/listTopicManagers:
     get:
       tags:
@@ -80,7 +56,7 @@ paths:
       responses:
         '200':
           description: |
-            A list of topic managers with their metadata.
+            A list of services with their metadata.
           content:
             application/json:
               schema:
@@ -94,16 +70,16 @@ paths:
                       type: string
                     iconURL:
                       type: string
-                      nullable: true
                     version:
                       type: string
-                      nullable: true
                     informationURL:
                       type: string
-                      nullable: true
                   required:
                     - name
                     - shortDescription
+                    - iconURL
+                    - version
+                    - informationURL
   /api/v1/getDocumentationForLookupServiceProvider:
     get:
       tags:
