refactor(arc-ingest): use decorator structure for arc-ingest authorization instead of global middleware design - WIP

--- a/api/openapi/server/api.yaml
+++ b/api/openapi/server/api.yaml
@@ -118,7 +118,7 @@ paths:
       security:
         - bearerAuth:
             - user
-            - arcCallBackToken
+            - arcIngest
       requestBody:
         required: true
         $ref: '../paths/non_admin/request-bodies.yaml#/components/requestBodies/ArcIngestBody'
